# kunnskapsgrunnlag-for-innovasjon

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
data/: questions.json  questions.txt
src/embedding_model/: __init__.py  chunker.py  embed.py  model.py  tokenizer.py
src/plot_utils/: __init__.py  plot_directorates.py  plot_how_often.py  plot_results.py
src/useful_notebooks/: LLM_question_answering_notebook.ipynb  add_data_to_df.ipynb  convert_pickled_df_to_float32.ipynb  embed_and_save.ipynb  fill_questions.ipynb  filter_out_short_paragraphs.ipynb  handle_intermediate_df.ipynb  hent_dokumenter_fra_db.ipynb  how_often.ipynb  output_to_html.ipynb  plot_for_each_org_each_question.ipynb  plot_interactive_texts.ipynb  plot_pipeline.ipynb  test_handle_decrompressed_documents.ipynb
src/utils/: __init__.py  concerned_year.py  departments.py  deviation_scaled_with_length.py  get_documents_by.py  lengths.py  mean_sims.py  sims.py
