[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Adrian Fagerland <adrian.fagerland@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch =  "^2.3.0"
transformers = "^4.39.2"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.4"
plotly = "^5.21.0"
scikit-learn = "^1.4.2"
sqlalchemy = { version = "^2.0.30", optional = true }
mysqlclient = { version = "^2.2.4", optional = true }
kaleido = "0.2.1"
openai = "^1.35.7"
markdown = "^3.6"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
ipywidgets = "^8.1.2"
nbformat = "^5.10.4"

[tool.poetry.extras]
db = ["sqlalchemy", "mysqlclient"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"